@@ -27,11 +27,24 @@ namespace rocksdb {
 enum ComparatorType { COMP_BYTEWISE, COMP_REVERSE_BYTEWISE };
 extern const std::vector<const char*> g_comparator_types;
 
+enum CompressionType {
+  kNoCompression = 0x0,
+  kSnappyCompression = 0x1,
+  kZlibCompression = 0x2,
+  kBZip2Compression = 0x3,
+  kLZ4Compression = 0x4,
+  kLZ4HCCompression = 0x5,
+  kXpressCompression = 0x6,
+  kZSTD = 0x7
+};
+extern const std::vector<const char*> g_compression_types;
+
 struct Config : public LocalConfig {
   Config();
 
   bool create_if_missing;
   ComparatorType comparator;
+  CompressionType compression;
 };
 
 }  // namespace rocksdb
@@ -44,4 +57,7 @@ bool ConvertFromString(const std::string& from, fastonosql::core::rocksdb::Confi
 
 std::string ConvertToString(fastonosql::core::rocksdb::ComparatorType comp);
 bool ConvertFromString(const std::string& from, fastonosql::core::rocksdb::ComparatorType* out);
+
+std::string ConvertToString(fastonosql::core::rocksdb::CompressionType comp);
+bool ConvertFromString(const std::string& from, fastonosql::core::rocksdb::CompressionType* out);
 }  // namespace common
