@@ -2,6 +2,8 @@
 [Alexandr Topilski]
 - CONFIG GET databases
 - Runtime SSH password
+- [LevelDB] Compression options
+- [RocksDB] Compression options
 
 1.15.0 / January 10, 2018
 [Alexandr Topilski]
